# jiayi-ros-pkg

./: .gitignore  README.md  stack.xml
jlUtilities/: CMakeLists.txt  manifest.xml
jlUtilities/include/jlUtilities/: CvImageWriter.h  CvKeySwitch.h  jlUtilities.h  logThis.h  opencv_helper.h
jlUtilities/matlab/: centerMocapModel.m  convertPCD2TXT.m  displayPoses.m  generateAprilCalibMdata.m  getStateFusionAvg.m  modular.m  parseOdomLog.m  plotDataAndError6DOF.m  plotDataAndError6DOF_fibupd.m  plotDataAndError6DOF_fiburt.m  plotDataAndError6DOF_fibuzm.m  plotDataAndError6DOF_personalData.m  plotHist.m  plotMAStateColumn.m  plotMLxytErrors.m  plotMapperLocalizer.m  roundAround180.m  searchFor.m  test.m  xz_calib.data
jlUtilities/matlab/html/: plotDataAndError6DOF.html
jlUtilities/src/: CvImageWriter.cpp  CvKeySwitch.cpp  jlUtilities.cpp  logThis.cpp  opencv_helper.cpp
tracking_mapping/: CMakeLists.txt  Doxyfile  README  README.md  mainpage.dox  manifest.xml
tracking_mapping/data/: book.yml
tracking_mapping/include/tracking_mapping/: opencv_helper.h
tracking_mapping/include/tracking_mapping/cv/: Camera.h  Dataset.h  FindCCC.h  Frame.h  InterestPoints.h  Pattern.h  Pose.h  PoseCCC.h  dataset_ucsb.h
tracking_mapping/include/tracking_mapping/tm/: Camera.h  Initializer.h  System.h  Tracker.h  myutils.h
tracking_mapping/launch/: camera_node.launch  tm.launch
tracking_mapping/src/: broadcast_video.cpp  init.cpp  init_featrues.cpp  log_sys.cpp  main.cpp  opencv_helper.cpp  record_video.cpp  show_vtk.cpp  tracking.cpp  tracking2.cpp
tracking_mapping/src/cv/: Camera.cpp  Dataset.cpp  FindCCC.cpp  Frame.cpp  InterestPoints.cpp  Pattern.cpp  Pose.cpp  PoseCCC.cpp
tracking_mapping/src/tm/: Camera.cpp  Initializer.cpp  System.cpp  Tracker.cpp  myutils.cpp
